--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "builds": [
-    {"src": "main_api.py", "use": "@vercel/python"}
+    {"src": "main_api.py", "use": "@now/python"}
   ],
   "routes": [
     {"src": "/(.*)", "dest": "main_api.py"}
